--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="topnav container-fluid row justify-content-center ms-0 py-3" style="transition: .4s ease;">
             <a class="navbar-brand d-block col-12 col-md-2 text-center" href="index.html"><img style="width: 200px;" src="./assets/img/logo.png" alt="" srcset=""></a>
             <button class="navbar-toggler d-block d-md-none col-1 lh-base bg-transparent text-center" style="border: none!important;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <span class="navbar-toggler-icon" style="transform: translateX(-2px);"><i class="fa-solid fa-bars"></i></span>
+                <span class="navbar-toggler-icon" style="transform: translateX(-2px);">
+                    <i class="fa-solid fa-bars"></i>
+                </span>
             </button>
             <form class="d-flex col-7 ps-0 justify-content-end" role="search">
                 <input class="form-control me-2 rounded-pill searchbar" type="search" placeholder="Search" aria-label="Search">
