--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-ABC
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -400,3 +397,4 @@ ABC
     <script src="./assets/js/scripts.js"></script>
 </body>
 </html>
+Hello
