--- a/index.html
+++ b/index.html
@@ -397,6 +397,4 @@
     <script src="./assets/js/scripts.js"></script>
 </body>
 </html>
-Hello
-DDungwf tu ys sua code cua taosf sfsf
-afdsfsf
+aaa
